--- a/site/templates/twig/items/itm/notes/internal/modal.twig
+++ b/site/templates/twig/items/itm/notes/internal/modal.twig
@@ -2,7 +2,7 @@
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h5 class="modal-title" id="notes-internal-modal-label"><span class="action-desc">Adding</span> {{ item.itemid }} Internal Notes</h5>
+				<h5 class="modal-title" id="notes-internal-modal-label"><span class="action-desc">Editing</span> {{ item.itemid }} Internal Notes</h5>
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
