FIX: add modal-lg to revision, make width 52 characters

--- a/site/templates/twig/items/itm/notes/revision/modal.twig
+++ b/site/templates/twig/items/itm/notes/revision/modal.twig
@@ -1,5 +1,5 @@
 <div class="modal fade" id="notes-revision-modal" tabindex="-1" role="dialog" aria-labelledby="notes-revision-modal-label" aria-hidden="true">
-	<div class="modal-dialog" role="document">
+	<div class="modal-dialog modal-lg" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
 				<h5 class="modal-title" id="notes-revision-modal-label"><span class="action-desc">Adding</span> {{ item.itemid }} Revision Notes</h5>
