--- a/site/templates/twig/mci/cio/js.twig
+++ b/site/templates/twig/mci/cio/js.twig
@@ -153,7 +153,8 @@ $(function() {
 			url: '{{ page.jsonapiURL('inv/validate/warehouse/') }}',
 			type: "get",
 			data: {
-				whseID: whseID
+				whseID: whseID,
+				jqv: 'true'
 			}
 		}
 	}
