--- a/site/templates/twig/sales-orders/sales-order/edit/edit-item/.js.twig
+++ b/site/templates/twig/sales-orders/sales-order/edit/edit-item/.js.twig
@@ -116,7 +116,8 @@ $(function() {
 						data: {
 							whseID: function() {
 								return $('#editwhse').val();
-							}
+							},
+							jqv: 'true'
 						}
 					}
 				},
