--- a/site/templates/twig/code-tables/min/iwhm/notes.twig
+++ b/site/templates/twig/code-tables/min/iwhm/notes.twig
@@ -14,11 +14,11 @@
 			<td class="text-right">
 				<textarea class="collapse" id="notes-{{ notetype }}" cols="{{ module_notes.get_notetype_column_count(notetype) }}">{{ module_notes.get_notes_array(notetype, warehouse.whseid)|join('\r') }}</textarea>
 				{% if module_notes.notes_exist(notetype, warehouse.whseid) %}
-					<button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#notes-modal" data-type="{{ notetype }}" data-description="{{ module_notes.get_notetype_description(notetype)|capitalize }}">
+					<button type="button" class="btn btn-secondary btn-sm" data-toggle="modal" data-target="#notes-modal" data-type="{{ notetype }}" data-description="{{ module_notes.get_notetype_description(notetype)|capitalize }}">
 						<i class="fa fa-pencil" aria-hidden="true"></i> Edit
 					</button>
 				{% else %}
-					<button type="button" class="btn btn-secondary notes_button" data-toggle="modal" data-target="#notes-modal" data-type="{{ notetype }}" data-description="{{ module_notes.get_notetype_description(notetype)|capitalize }}" {{ warehouse.whseid ? '' : 'disabled' }}>
+					<button type="button" class="btn btn-secondary btn-sm notes_button" data-toggle="modal" data-target="#notes-modal" data-type="{{ notetype }}" data-description="{{ module_notes.get_notetype_description(notetype)|capitalize }}" {{ warehouse.whseid ? '' : 'disabled' }}>
 						<i class="fa fa-plus" aria-hidden="true"></i> Add
 					</button>
 				{% endif %}
