--- a/site/templates/twig/code-tables/min/iwhm/notes/js.twig
+++ b/site/templates/twig/code-tables/min/iwhm/notes/js.twig
@@ -15,7 +15,7 @@ $(function() {
 		var modal = $(this);
 		modal.find('.desc').text(description.capitalize());
 		modal.find('textarea[name=note]').val('');
-		modal.find('textarea[name=note]').val(ele_notes.text()).attr('cols', ele_notes.attr('cols') - 1);
+		modal.find('textarea[name=note]').val(ele_notes.text()).attr('cols', ele_notes.attr('cols'));
 		modal.find('input[name=notes-type]').val(notetype);
 	});
 
