--- a/site/templates/twig/items/itm/notes/inspection/modal.twig
+++ b/site/templates/twig/items/itm/notes/inspection/modal.twig
@@ -34,7 +34,7 @@
 					</div>
 					<div class="form-group">
 						<label for="inspection-notes">Notes</label>
-						{% include 'util/qnotes-textarea.twig' with {'id': 'inspection-notes', 'cols': qnotes.notes.inspection.get_column_count() - 1, 'rows': 15 } %}
+						{% include 'util/qnotes-textarea.twig' with {'id': 'inspection-notes', 'cols': qnotes.notes.inspection.get_column_count(), 'rows': 15 } %}
 					</div>
 
 					<div class="d-flex justify-content-between align-items-center">
