--- a/site/templates/twig/items/itm/notes/internal/modal.twig
+++ b/site/templates/twig/items/itm/notes/internal/modal.twig
@@ -16,7 +16,7 @@
 					</div>
 					<div class="form-group">
 						<label for="note">Notes</label>
-						{% include 'util/qnotes-textarea.twig' with {'id': 'internal-notes', 'cols': qnotes.notes.internal.get_column_count() - 1, 'val': qnotes.notes.internal.get_notes_form_array(item.itemid)|join('\r') } %}
+						{% include 'util/qnotes-textarea.twig' with {'id': 'internal-notes', 'cols': qnotes.notes.internal.get_column_count(), 'val': qnotes.notes.internal.get_notes_form_array(item.itemid)|join('\r') } %}
 					</div>
 					<textarea name="original" id="original" class="collapse" cols="{{qnotes.notes.internal.get_column_count()}}">{{qnotes.notes.internal.get_notes_form_array(item.itemid)|join('\r')}}</textarea>
 					<div class="d-flex justify-content-between align-items-center">
