--- a/site/templates/twig/items/itm/notes/order/modal.twig
+++ b/site/templates/twig/items/itm/notes/order/modal.twig
@@ -36,7 +36,7 @@
 					<div class="form-group">
 						<label for="order-notes">Notes</label>
 						<div class="d-flex justify-content-between align-items-center">
-							{% include 'util/qnotes-textarea.twig' with {'id':'order-notes', 'cols': qnotes.notes.order.get_column_count() - 1, 'rows': 15 } %}
+							{% include 'util/qnotes-textarea.twig' with {'id':'order-notes', 'cols': qnotes.notes.order.get_column_count(), 'rows': 15 } %}
 						</div>
 					</div>
 
