--- a/site/templates/twig/items/itm/notes/revision/modal.twig
+++ b/site/templates/twig/items/itm/notes/revision/modal.twig
@@ -38,7 +38,7 @@
 					</div>
 					<div class="form-group">
 						<label for="revision-notes">Notes</label>
-						{% include 'util/qnotes-textarea.twig' with {'id': 'revision-notes', 'cols': qnotes.notes.revision.get_column_count() - 1, 'rows': 15 } %}
+						{% include 'util/qnotes-textarea.twig' with {'id': 'revision-notes', 'cols': qnotes.notes.revision.get_column_count(), 'rows': 15 } %}
 					</div>
 
 					<div class="d-flex justify-content-between align-items-center">
