--- a/site/templates/twig/msa/noce/notes-modal.twig
+++ b/site/templates/twig/msa/noce/notes-modal.twig
@@ -22,7 +22,7 @@
 					<div class="form-group">
 						<label for="note">Note</label>
 						<div class="form-group d-flex justify-content-between align-items-center">
-							<textarea name="note" id="note" class="form-control w-auto qnotes" rows="10" cols="{{ qnotes.get_column_count() - 1 }}"></textarea>
+							<textarea name="note" id="note" class="form-control w-auto qnotes" rows="10" cols="{{ qnotes.get_column_count() }}"></textarea>
 						</div>
 					</div>
 					<div class="d-flex justify-content-between align-items-center">
