--- a/site/templates/twig/purchase-orders/purchase-order/qnotes/irev/modal.twig
+++ b/site/templates/twig/purchase-orders/purchase-order/qnotes/irev/modal.twig
@@ -50,7 +50,7 @@
 					</div>
 					<div class="form-group">
 						<label for="revision_notes">Notes</label>
-						{% include 'util/qnotes-textarea.twig' with {'id': 'revision_notes', 'cols': qnotes.irev.get_column_count() - 1, 'rows': 15 } %}
+						{% include 'util/qnotes-textarea.twig' with {'id': 'revision_notes', 'cols': qnotes.irev.get_column_count(), 'rows': 15 } %}
 					</div>
 
 					<div class="d-flex justify-content-between align-items-center">
