--- a/site/templates/twig/quotes/quote/notes/note-modal.twig
+++ b/site/templates/twig/quotes/quote/notes/note-modal.twig
@@ -53,7 +53,7 @@
 					</div>
 					<div class="form-group">
 						<label for="note">Notes</label>
-						{% include 'util/qnotes-textarea.twig' with {'cols': qnotes.get_column_count() - 1, 'rows': 15 } %}
+						{% include 'util/qnotes-textarea.twig' with {'cols': qnotes.get_column_count(), 'rows': 15 } %}
 					</div>
 					<div class="d-flex justify-content-between align-items-center">
 						<button type="submit" name="action" value="update" class="btn btn-success">
