--- a/site/templates/twig/sales-orders/sales-order/notes/modal.twig
+++ b/site/templates/twig/sales-orders/sales-order/notes/modal.twig
@@ -48,7 +48,7 @@
 					</div>
 					<div class="form-group">
 						<label for="note">Notes</label>
-						{% include 'util/qnotes-textarea.twig' with {'cols': qnotes_so.get_column_count() - 1, 'rows': 15 } %}
+						{% include 'util/qnotes-textarea.twig' with {'cols': qnotes_so.get_column_count(), 'rows': 15 } %}
 					</div>
 
 					<div class="d-flex justify-content-between align-items-center">
