--- a/site/templates/twig/min/inproc/menu.twig
+++ b/site/templates/twig/min/inproc/menu.twig
@@ -8,7 +8,7 @@
 </div>
 <div class="list-group dplus-menu">
 	{% for key, function  in functions %}
-		<a href="{{ page.subfunctionUrl(key) }}" class="list-group-item list-group-item-action">
+		<a href="{{ page.subfunctionUrl(key) }}" class="list-group-item list-group-item-action" data-key="{{ key }}">
 			<div class="row align-items-center">
 				<div class="col-4">
 					<i class="fa fa-microchip" aria-hidden="true"></i> &nbsp; &nbsp;
