--- a/site/templates/twig/code-tables/mpo/cnfm/form.twig
+++ b/site/templates/twig/code-tables/mpo/cnfm/form.twig
@@ -1,16 +1,16 @@
 {# cnfm is an instance of PoConfirmCode #}
 {# data-code is for verifying edit vs new #}
-<form action="{{ page.url }}" method="POST" id="code-edit-form" data-code="">
-	<input type="hidden" name="table" value="cnfm">
+<form action="{{ input.url() }}" method="POST" id="code-form" data-code="">
+	<input type="hidden" name="action" value="edit-code">
 
 	<div class="form-group">
 		<label for="code">Code</label>
-		<input type="text" name="code" class="form-control" maxlength="{{ max_length_code }}" value="" id="code">
+		<input type="text" name="code" class="form-control" maxlength="{{ cnfm.codeMaxLength() }}" value="" id="code">
 	</div>
 
 	<div class="form-group">
 		<label for="description">Description</label>
-		<input type="text" name="description" class="form-control" maxlength="20" value="" id="description">
+		<input type="text" name="description" class="form-control" maxlength="20" id="description">
 	</div>
 
 	<div class="d-flex justify-content-between align-items-center">
