--- a/site/templates/twig/code-tables/mpo/cnfm/js.twig
+++ b/site/templates/twig/code-tables/mpo/cnfm/js.twig
@@ -18,15 +18,6 @@ $(function() {
 		formCode.updateInputsFromJson(button.data('json'));
 	});
 
-	// $("body").on("click", ".swal-edit-code", function(e) {
-	// 	var button = $(this);
-	// 	var code = button.data('code');
-	// 	var edit_button = $('button[data-code='+code+']');
-	// 	var modal = $('#edit-code-modal');
-	// 	populate_edit_from_button(edit_button, modal);
-	// 	swal2.close();
-	// });
-
 	$("body").on("change", "input[name=code]", function(e) {
 		var input = $(this);
 		var code = input.val();
@@ -47,6 +38,12 @@ $(function() {
 				});
 			}
 		});
+	});
+
+	$("body").on("focusin", "#code-form input:not(input[name=code])", function(e) {
+		if (formCode.inputs.code.val() == '') {
+			formCode.inputs.code.focus();
+		}
 	});
 
 /* =============================================================
@@ -80,95 +77,42 @@ $(function() {
 			code: "Please check the Code value (Max Length: {{ max_length_code }})",
 		},
 		submitHandler: function(form) {
-			var jform = $(form);
-			var codeID = input_codeID.val();
+			var formCode = CnfmForm.getInstance();
+			var server   = CnfmRequests.getInstance();
+			var code = formCode.inputs.code.val();
 
-			if (validate_codeID(form)) {
+			if (formCode.inputs.form.attr('data-code') == code) {
 				form.submit();
 			} else {
-				var bootstrap = new JsContento();
-				var content = bootstrap.open('div', 'class=swal2-content|id=swal2-content');
-				content += '<button type="button" class="btn btn-secondary swal-edit-code" data-code="'+codeID+'">Edit Customer Price Code '+ codeID +'</button>';
-				content += '<br>';
-				content += "Do you want to overwrite?";
-				content += bootstrap.close('div');
+				server.validateCode(code, function(exists) {
+					var alert = CnfmAlerts.getInstance();
 
-				swal2.fire({
-					title: 'Confirmation Code ' +input_codeID.val() + ' Exists' ,
-					text: 'Do you want to overwrite?',
-					icon: 'warning',
-					showCancelButton: true,
-					confirmButtonText: '<i class="fa fa-floppy-o" aria-hidden="true"></i> Yes',
-					cancelButtonText: 'No',
-					html: content,
-				}).then((result) => {
-					if (result.value) {
-						form.submit();
-					}
+					alert.codeExists(code, function(editCode) {
+						if (editCode) {
+							var modal = formCode.form.closest('.modal');
+
+							if (editCode) {
+								var button = $('button[data-code="'+code+'"]');
+								formCode.updateInputsFromJson(button.data('json'));
+							} else {
+								modal.modal('hide');
+							}
+						}
+					});
 				});
 			}
 		}
 	});
 
-	$("body").on("focusin", "#code-edit-form input:not(#code)", function(e) {
-		if (input_codeID.val() == '') {
-			validator.element( "#code" );
-			input_codeID.focus();
-		}
-	});
-
-	/**
-	 * Return if Confirmation Code ID can be used to save, based upon if
-	 * it exists, and if is the one being edited.
-	 * @param  {[type]} form [description]
-	 * @return {[type]}      [description]
-	 */
-	function validate_codeID(form) {
-		var jform = $(form);
-
-		if (codeIDs.contains(input_codeID.val())) {
-			console.log('Confirmation Code Exists');
-
-			if (input_codeID.val() != jform.attr('data-code')) {
-				return false;
-			}
-		}
-		return true;
-	}
-
 /* =============================================================
 	Form Functions
 ============================================================= */
-	/**
-	 * Populate Modal Form with button data-* attributes
-	 * @param  $('button') button
-	 * @param  $('.modal') modal
-	 * @return void
-	 */
-	function populate_edit_from_button(button, modal) {
-		var code = button.data('code').toString();
-		var description = button.data('description').toString();
-
-		modal.find('form').attr('data-code', code);
-		modal.find('input[name=code]').val(code);
-		modal.find('input[name=description]').val(description);
-
-		if (code.length) {
-			modal.find('.modal-title').text('Editing Code ' + code);
-			modal.find('input[name=code]').prop("readonly", true);
-			modal.find('input[name=description]').focus();
-		} else {
-			modal.find('.modal-title').text('Adding a new Code');
-			modal.find('input[name=code]').prop("readonly", false);
-			modal.find('input[name=code]').focus();
-		}
-	}
-
 	$("#edit-code-modal").on('hidden.bs.modal', function (e) {
+		var form = formCode.inputs.form;
 		form.validate().resetForm();
-	    form.find('.is-invalid').removeClass("is-invalid");
-	    form.find('.is-valid').removeClass("is-valid");
-	    form.find('.invalid-feedback').remove();
-	    form.find('.valid-feedback').remove();
+		form.find('.is-invalid').removeClass("is-invalid");
+		form.find('.is-valid').removeClass("is-valid");
+		form.find('.invalid-feedback').remove();
+		form.find('.valid-feedback').remove();
 	});
 })
