--- a/site/templates/twig/purchase-orders/purchase-order/qnotes/irev/js.twig
+++ b/site/templates/twig/purchase-orders/purchase-order/qnotes/irev/js.twig
@@ -17,9 +17,12 @@ $(function() {
 			modal.find('textarea[name=note]').val(note_row.find('textarea').text());
 		} else {
 			modal.find('.action-desc').text('Adding');
-			modal.find('input[name=notedate]').val(button.data('date')).removeAttr('readonly');
-			modal.find('input[name=notetime]').val(button.data('time')).removeAttr('readonly');
 			modal.find('textarea[name=note]').val('');
+			
+			$.getJSON('{{ page.jsonApiUrl('misc/date-time/') }}', function(datetime) {
+				modal.find('input[name=notetime]').val(date.time).removeAttr('readonly');
+				modal.find('input[name=notedate]').val(date.time).removeAttr('readonly');
+			});
 		}
 
 		modal.find('input[name=revision]').val(button.data('revision'));
