--- a/site/templates/twig/min/inproc/iarn/bread-crumbs.twig
+++ b/site/templates/twig/min/inproc/iarn/bread-crumbs.twig
@@ -12,7 +12,7 @@
 	{% if values.offsetExists('id') and values.text('id') != 'new' %}
 		<li class="breadcrumb-item">
 			<a href="{{ page.codeListUrl(values.text('id')) }}">
-				<i class="fa fa-arrows" aria-hidden="true"></i> {{ page.has('dplus_function') ? page.dplus_function|upper : page.title }}
+				IARN
 			</a>
 		</li>
 		<li class="breadcrumb-item active" aria-current="page">{{ values.text('id') }}</li>
