--- a/site/templates/twig/items/cxm/xref/notes/modal.twig
+++ b/site/templates/twig/items/cxm/xref/notes/modal.twig
@@ -41,7 +41,7 @@
 					</div>
 					<div class="form-group">
 						<label for="note">Notes</label>
-						{% include 'util/qnotes-textarea.twig' with {'cols': qnotes.get_column_count() 'rows': 15 } %}
+						{% include 'util/qnotes-textarea.twig' with {'cols': qnotes.get_column_count(), 'rows': 15 } %}
 					</div>
 
 					<div class="d-flex justify-content-between align-items-center">
