--- a/site/templates/twig/items/cxm/xref/notes/js.twig
+++ b/site/templates/twig/items/cxm/xref/notes/js.twig
@@ -25,6 +25,7 @@ $(function() {
 	$("#order-notes-form").validate({
 		errorClass: "is-invalid",
 		validClass: "is-valid",
+		ignore: ".validate-ignore",
 		errorPlacement: function(error, element) {
 			error.insertAfter(element).addClass('invalid-feedback');
 		},
