--- a/site/templates/twig/items/itm/warehouse/notes/order/modal.twig
+++ b/site/templates/twig/items/itm/warehouse/notes/order/modal.twig
@@ -39,7 +39,7 @@
 					<div class="form-group">
 						<label for="order-notes">Notes</label>
 						<div class="d-flex justify-content-between align-items-center">
-							<textarea class="form-control w-auto qnotes" name="note" id="order-notes" rows="10" cols="{{ qnotes.get_column_count() }}"></textarea>
+							{% include 'util/qnotes-textarea.twig' with {'id': 'order-notes', 'cols': qnotes.get_column_count(), 'val': '' } %}
 						</div>
 					</div>
 
