--- a/site/templates/twig/items/mxrfe/xref/notes/intv/modal.twig
+++ b/site/templates/twig/items/mxrfe/xref/notes/intv/modal.twig
@@ -47,7 +47,7 @@
 					<div class="form-group">
 						<label for="intv-notes">Notes</label>
 						<div class="d-flex justify-content-between align-items-center">
-							<textarea class="form-control w-auto qnotes" name="note" id="intv-notes" rows="10" cols="{{ qnotes.intv.get_column_count() }}" wrap="hard"></textarea>
+							{% include 'util/qnotes-textarea.twig' with {'id': 'intv-notes', rows: 15, 'cols': qnotes.intv.get_column_count(), 'val': '' } %}
 						</div>
 					</div>
 
