--- a/site/templates/twig/items/mxrfe/xref/notes/mmsc/js.twig
+++ b/site/templates/twig/items/mxrfe/xref/notes/mmsc/js.twig
@@ -39,6 +39,7 @@ $(function () {
 	var validator = form_mmsc.validate({
 		errorClass: "is-invalid",
 		validClass: "is-valid",
+		ignore: ".validate-ignore",
 		errorPlacement: function(error, element) {
 			error.insertAfter(element).addClass('invalid-feedback');
 		},
