--- a/site/templates/twig/items/vxm/notes/detail/js.twig
+++ b/site/templates/twig/items/vxm/notes/detail/js.twig
@@ -22,6 +22,7 @@ $(function () {
 	var validator = form_detail.validate({
 		errorClass: "is-invalid",
 		validClass: "is-valid",
+		ignore: ".validate-ignore",
 		errorPlacement: function(error, element) {
 			error.insertAfter(element).addClass('invalid-feedback');
 		},
