--- a/site/templates/twig/items/vxm/notes/detail/modal.twig
+++ b/site/templates/twig/items/vxm/notes/detail/modal.twig
@@ -29,7 +29,7 @@
 					<div class="form-group">
 						<label for="internal-notes">Notes</label>
 						<div class="d-flex justify-content-between align-items-center">
-							<textarea class="form-control w-auto qnotes" name="note" id="detail-notes" rows="10" cols="{{ qnotes.notes.detail.get_column_count() }}" wrap="hard"></textarea>
+							{% include 'util/qnotes-textarea.twig' with {'id': 'detail-notes', rows: 15, 'cols': qnotes.notes.detail.get_column_count(), 'val': '' } %}
 						</div>
 					</div>
 
