--- a/site/templates/twig/purchase-orders/purchase-order/qnotes/irev/js.twig
+++ b/site/templates/twig/purchase-orders/purchase-order/qnotes/irev/js.twig
@@ -18,7 +18,7 @@ $(function() {
 		} else {
 			modal.find('.action-desc').text('Adding');
 			modal.find('textarea[name=note]').val('');
-			
+
 			$.getJSON('{{ page.jsonApiUrl('misc/date-time/') }}', function(datetime) {
 				modal.find('input[name=notetime]').val(date.time).removeAttr('readonly');
 				modal.find('input[name=notedate]').val(date.time).removeAttr('readonly');
@@ -36,6 +36,7 @@ $(function() {
 	var validator = form.validate({
 		errorClass: "is-invalid",
 		validClass: "is-valid",
+		ignore: ".validate-ignore",
 		errorPlacement: function(error, element) {
 			error.insertAfter(element).addClass('invalid-feedback');
 		},
