--- a/site/templates/twig/sales-orders/sales-order/notes/js.twig
+++ b/site/templates/twig/sales-orders/sales-order/notes/js.twig
@@ -131,6 +131,7 @@ $(function() {
 	form.validate({
 		errorClass: "is-invalid",
 		validClass: "is-valid",
+		ignore: ".validate-ignore",
 		errorPlacement: function(error, element) {
 			error.insertAfter(element).addClass('invalid-feedback');
 		},
