--- a/site/templates/twig/items/vxm/notes/internal/modal.twig
+++ b/site/templates/twig/items/vxm/notes/internal/modal.twig
@@ -48,7 +48,7 @@
 						<div class="d-flex justify-content-between align-items-center">
 							{% include 'util/qnotes-textarea.twig' with {
 									'id': 'intv-notes',
-									'rows': 15, 'cols': qnotes.intv.get_column_count(),
+									'rows': 15, 'cols': qnotes.notes.internal.get_column_count(),
 									'val': ''
 								}
 							%}
