--- a/site/templates/twig/items/cxm/xref/notes/modal.twig
+++ b/site/templates/twig/items/cxm/xref/notes/modal.twig
@@ -26,7 +26,7 @@
 							{% for form, label in qnotes.get_forms_shortlabels() %}
 								<div class="col">
 									<div class="custom-control custom-checkbox">
-										<input type="checkbox" class="custom-control-input" name={{ form }} id="order-{{form}}" value="Y">
+										<input type="checkbox" class="custom-control-input order-form" name="{{ form }}" id="order-{{form}}" value="Y">
 										<label class="custom-control-label" for="order-{{form}}">{{ form|capitalize }}</label>
 									</div>
 								</div>
