--- a/site/templates/twig/items/mxrfe/xref/notes/notes.twig
+++ b/site/templates/twig/items/mxrfe/xref/notes/notes.twig
@@ -6,37 +6,39 @@
 	xref                   ItemXrefManufacturer
 	qnotes                 module QnotesItemMxrfe
 #}
-{% if session.get('response_qnote') %}
-	{% include 'code-tables/code-table-response.twig' with {'response':  session.get('response_qnote') } %}
+{% set response = session.get('response_qnote') %}
+{% if response %}
+	{% include 'code-tables/code-table-response.twig' with {'response': response} %}
 {% endif %}
 <h3>Notes <i class="fa fa-commenting" aria-hidden="true"></i></h3>
 
+
 <ul class="nav nav-tabs mb-3" id="notes-tab" role="tablist">
 	<li class="nav-item" role="presentation">
-		<a class="nav-link active" id="intv-tab" data-toggle="tab" href="#intv" role="tab" aria-controls="intv" aria-selected="true">
+		<a class="nav-link {{ response.type == qnotes.intv.type() ? 'active' : (response ? '' : 'active') }}" id="intv-tab" data-toggle="tab" href="#intv" role="tab" aria-controls="intv" aria-selected="true">
 			Internal
 		</a>
 	</li>
 	<li class="nav-item" role="presentation">
-		<a class="nav-link" id="mnfr-tab" data-toggle="tab" href="#mnfr" role="tab" aria-controls="mnfr" aria-selected="false">
+		<a class="nav-link {{ response.type == qnotes.mnfr.type() ? 'active' : '' }}" id="mnfr-tab" data-toggle="tab" href="#mnfr" role="tab" aria-controls="mnfr" aria-selected="false">
 			Manufacturer
 		</a>
 	</li>
 	<li class="nav-item" role="presentation">
-		<a class="nav-link" id="mmsc-tab" data-toggle="tab" href="#mmsc" role="tab" aria-controls="mmsc" aria-selected="false">
+		<a class="nav-link {{ response.type == qnotes.mmsc.type() ? 'active' : '' }}" id="mmsc-tab" data-toggle="tab" href="#mmsc" role="tab" aria-controls="mmsc" aria-selected="false">
 			Misc
 		</a>
 	</li>
 </ul>
 
 <div class="tab-content" id="notes-tab-content">
-	<div class="tab-pane fade show active" id="intv" role="tabpanel" aria-labelledby="intv-tab">
+	<div class="tab-pane fade show {{ response.type == qnotes.intv.type() ? 'show active' : (response ? '' : 'show active') }}" id="intv" role="tabpanel" aria-labelledby="intv-tab">
 		{% include 'items/mxrfe/xref/notes/intv/notes.twig' %}
 	</div>
-	<div class="tab-pane fade" id="mnfr" role="tabpanel" aria-labelledby="mnfr-tab">
+	<div class="tab-pane fade {{ response.type == qnotes.mnfr.type() ? 'show active' : '' }}" id="mnfr" role="tabpanel" aria-labelledby="mnfr-tab">
 		{% include 'items/mxrfe/xref/notes/mnfr/notes.twig' %}
 	</div>
-	<div class="tab-pane fade" id="mmsc" role="tabpanel" aria-labelledby="mmsc-tab">
+	<div class="tab-pane fade {{ response.type == qnotes.mmsc.type() ? 'show active' : '' }}" id="mmsc" role="tabpanel" aria-labelledby="mmsc-tab">
 		{% include 'items/mxrfe/xref/notes/mmsc/notes.twig' %}
 	</div>
 </div>
