--- a/site/templates/twig/items/itm/warehouse/list.twig
+++ b/site/templates/twig/items/itm/warehouse/list.twig
@@ -11,10 +11,10 @@
 		<th>
 			<abbr title="Supply Warehouse">S-Wh</abbr>
 		</th>
-		<th class="text-right">Order Point</th>
-		<th class="text-right">Order Quantity</th>
-		<th class="text-right">Max Qty</th>
-		<th class="text-right">Count Date</th>
+		<th>Order Point</th>
+		<th>Order Quantity</th>
+		<th>Max Quantity</th>
+		<th>Count Date</th>
 		<th>Note</th>
 		<th>
 			<a href="{{ page.itmUrlWhse(itemID, 'new') }}" class="btn btn-light btn-sm">
@@ -37,11 +37,13 @@
 				<td>{{ warehouse.status }}</td>
 				<td>{{ warehouse.specialorder }}</td>
 				<td>{{ warehouse.whsesupply }}</td>
-				<td class="text-right">{{ warehouse.orderpoint + 0 }}</td>
-				<td class="text-right">{{ warehouse.orderqty + 0 }}</td>
-				<td class="text-right">{{ warehouse.maxqty + 0 }}</td>
-				<td class="text-right">{{ warehouse.countdate ? warehouse.countdate|convertdate : '' }}</td>
-				<td></td>
+				<td class="text-center">{{ warehouse.orderpoint + 0 }}</td>
+				<td class="text-center">{{ warehouse.orderqty + 0 }}</td>
+				<td class="text-center">{{ warehouse.maxqty + 0 }}</td>
+				<td>{{ warehouse.countdate ? warehouse.countdate|convertdate : '' }}</td>
+				<td>
+					{{ qnotes.anyNotesExist(warehouse.itemid, warehouse.warehouseid)|yesorno|capitalize }}
+				</td>
 				<td>
 					{% if itmw.recordlocker.isLocked(itmw.get_warehouseitem_lockkey(warehouse)) == false or itmw.recordlocker.userHasLocked(itmw.get_warehouseitem_lockkey(warehouse)) %}
 						<a href="{{ page.itmUrlWhse(warehouse.itemid, warehouse.warehouseid) }}" class="btn btn-warning btn-sm">
