Update itm display

--- a/site/templates/twig/items/itm/display.twig
+++ b/site/templates/twig/items/itm/display.twig
@@ -7,10 +7,15 @@
 				<div class="col-sm-2">
 					<strong>Item ID:</strong>
 				</div>
+				<div class="col-sm-4">
+					{{ configIn.useUppercaseItemid() ? item.itemid|upper : item.itemid  }}
+				</div>
 				<div class="col-sm-6">
-					{{ configIn.useUppercaseItemid() ? item.itemid|upper : item.itemid  }} -
-					{{ configIn.useUppercaseItemDesc() ? item.description|upper : item.description }} -
-					{{ configIn.useUppercaseItemDesc() ? item.description2|upper : item.description2 }}
+					{{ configIn.useUppercaseItemDesc() ? item.description|upper : item.description }}
+					{% if item.description2 %}
+						<br>
+						{{ configIn.useUppercaseItemDesc() ? item.description2|upper : item.description2 }}
+					{% endif %}
 				</div>
 			</div>
 		</div>
