--- a/site/templates/twig/items/itm/warehouse/form.twig
+++ b/site/templates/twig/items/itm/warehouse/form.twig
@@ -4,7 +4,7 @@
 	warehouse              WarehouseInventory
 	m_whse                 module ItmWarehouse
 #}
-<form action="{{ page.wire('input').url() }}" method="post" id="item-whse-form">
+<form action="{{ input.url() }}" method="post" id="item-whse-form">
 	<input type="hidden" name="itemID" value="{{ warehouse.itemid }}">
 	<div class="row mb-3">
 		<div class="col-sm-8">
@@ -79,7 +79,7 @@
 					<label for="cyclecode">Cycle Code</label>
 				</div>
 				<div class="col-sm-8">
-					<input type="text" name="cyclecode" id="cyclecode" class="form-control form-control-sm form-control-sm w-auto" value="{{ warehouse.cyclecode }}">
+					<input type="text" name="cyclecode" id="cyclecode" class="form-control form-control-sm w-auto" value="{{ warehouse.cyclecode }}">
 				</div>
 			</div>
 			<div class="form-group row">
@@ -87,7 +87,7 @@
 					<label for="codeabc">ABC Code</label>
 				</div>
 				<div class="col-sm-8">
-					<input type="text" name="codeabc" id="codeabc" class="form-control form-control-sm form-control-sm w-auto" value="{{ warehouse.codeabc }}">
+					<input type="text" name="codeabc" id="codeabc" class="form-control form-control-sm w-auto" value="{{ warehouse.codeabc }}">
 				</div>
 			</div>
 			<div class="form-group row">
@@ -95,7 +95,7 @@
 					<label for="orderpoint">Order Point</label>
 				</div>
 				<div class="col-sm-8">
-					<input type="number" name="orderpoint" id="orderpoint" class="form-control form-control-sm form-control-sm text-right w-auto" value="{{ warehouse.orderpoint|number_format(0) }}">
+					<input type="number" name="orderpoint" id="orderpoint" class="form-control form-control-sm text-right w-auto" value="{{ warehouse.orderpoint|number_format(0) }}">
 				</div>
 			</div>
 			<div class="form-group row">
@@ -103,7 +103,7 @@
 					<label for="orderqty">Order Qty</label>
 				</div>
 				<div class="col-sm-8">
-					<input type="number" name="orderqty" id="orderqty" class="form-control form-control-sm form-control-sm text-right w-auto" value="{{ warehouse.orderqty|number_format(0) }}">
+					<input type="number" name="orderqty" id="orderqty" class="form-control form-control-sm text-right w-auto" value="{{ warehouse.orderqty|number_format(0) }}">
 				</div>
 			</div>
 			<div class="form-group row">
@@ -111,7 +111,7 @@
 					<label for="maxqty">Max Qty</label>
 				</div>
 				<div class="col-sm-8">
-					<input type="number" name="maxqty" id="maxqty" class="form-control form-control-sm form-control-sm text-right w-auto" value="{{ warehouse.maxqty|number_format(0) }}">
+					<input type="number" name="maxqty" id="maxqty" class="form-control form-control-sm text-right w-auto" value="{{ warehouse.maxqty|number_format(0) }}">
 				</div>
 			</div>
 			<div class="form-group row">
@@ -119,15 +119,7 @@
 					<label for="maxorderqty">Max Per Order</label>
 				</div>
 				<div class="col-sm-8">
-					<input type="number" name="maxorderqty" id="maxorderqty" class="form-control form-control-sm form-control-sm text-right w-auto" value="{{ warehouse.maxorderqty|number_format(0) }}">
-				</div>
-			</div>
-			<div class="form-group row">
-				<div class="col-sm-4">
-					<label for="maxorderqty">Max Per Order</label>
-				</div>
-				<div class="col-sm-8">
-					<input type="number" name="maxorderqty" id="maxorderqty" class="form-control form-control-sm form-control-sm text-right w-auto" value="{{ warehouse.maxorderqty|number_format(0) }}">
+					<input type="number" name="maxorderqty" id="maxorderqty" class="form-control form-control-sm text-right w-auto" value="{{ warehouse.maxorderqty|number_format(0) }}">
 				</div>
 			</div>
 			<div class="form-group row">
@@ -135,7 +127,7 @@
 					<label for="freightin">Freight In</label>
 				</div>
 				<div class="col-sm-8">
-					<input type="{{ m_whse.configs.salesorder.is_freightin() ? 'number' : 'text' }}" name="freightin" id="freightin" class="{{ m_whse.configs.salesorder.is_freightin() ? 'form-control' : 'form-control-plaintext' }} text-right w-auto" value="{{ warehouse.freightin }}" {{ m_whse.configs.salesorder.is_freightin() ? '' : 'readonly' }}>
+					<input type="{{ m_whse.configs.salesorder.is_freightin() ? 'number' : 'text' }}" name="freightin" id="freightin" class="form-control form-control-sm text-right w-auto" value="{{ warehouse.freightin }}" {{ m_whse.configs.salesorder.is_freightin() ? '' : 'readonly' }}>
 				</div>
 			</div>
 			<div class="form-group row">
